package com.linglevel.api.content.book.entity;

import lombok.*;
import org.springframework.data.annotation.Id;
import org.springframework.data.mongodb.core.mapping.Document;

@Getter
@Setter
@NoArgsConstructor
@AllArgsConstructor
@Document(collection = "chapters")
public class Chapter {
    @Id
    private String id;
    
    private String bookId;
    
    private Integer chapterNumber;
    
    private String title;
    
    private String chapterImageUrl;
    
    private String description;
    
    private Integer readingTime;
} 